fix: put category tags under post title on small screens

--- a/src/styles/categories.scss
+++ b/src/styles/categories.scss
@@ -1,8 +1,10 @@
 .categories {
     display: flex;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
+    @media screen and (min-width: 40em) {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+    }
     .category-tag {
         align-items: center;
         border-radius: .75rem;
